# School-of-Solana-Season-6

./: README.md
program-rioyuda02/Solana_Instagram/anchor_project/: README.md
program-rioyuda02/Solana_Instagram/anchor_project/instagram-sol/: Anchor.toml
program-rioyuda02/Solana_Instagram/anchor_project/instagram-sol/programs/instagram-sol/: Cargo.toml
program-rioyuda02/Solana_Instagram/anchor_project/instagram-sol/programs/instagram-sol/src/: lib.rs
program-rioyuda02/Solana_Instagram/anchor_project/instagram-sol/tests/: instagram-sol.ts
program-rioyuda02/Solana_Instagram/frontend/: README.md
program-rioyuda02/Solana_Instagram/frontend/instagram/: .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
program-rioyuda02/Solana_Instagram/frontend/instagram/src/anchor/idl/: instagram_sol.json
program-rioyuda02/Solana_Instagram/frontend/instagram/src/anchor/types/: instagram_sol.ts
program-rioyuda02/Solana_Instagram/frontend/instagram/src/app/: globals.css  layout.tsx  page.tsx
program-rioyuda02/Solana_Instagram/frontend/instagram/src/app/components/: CreatePost.tsx  CreateProfile.tsx
program-rioyuda02/Solana_Instagram/frontend/instagram/src/app/contexts/: ProgramContext.tsx
program-rioyuda02/Solana_Instagram/frontend/instagram/src/app/providers/: SolanaProvider.tsx
task1-rioyuda02/src/: main.rs
task2-rioyuda02/src/: main.rs
task3-rioyuda02/programs/on-chain-calculator/src/: lib.rs
task4-rioyuda02/programs/twitter/src/instructions/: add_comment.rs  add_reaction.rs  initialize_tweet.rs  remove_reaction.rs
(+1 files in other folders)
